<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:paddingTop="15dp"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_main_cwm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_installer"
            android:onClick="recoveryInstaller" />
        
        <Button
            android:id="@+id/btn_main_stock"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_uninstaller"
            android:onClick="recoveryUninstaller" />    
            
        <Button
            android:id="@+id/btn_main_sdhacks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SD_Stuff"
            android:onClick="sdhacks" />   

        <Button
            android:id="@+id/btn_main_rebooter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rebooter"
            android:onClick="rebooter" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/info"
        android:onClick="info" />

</RelativeLayout>